ladder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ladder
  namespace: ladder
spec:
  selector:
    app: ladder
  ports:
    - port: 8080
