ladder/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ladder
  namespace: ladder
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ladder.lab53.net`)
      kind: Rule
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
      services:
        - name: ladder
          serversTransport: traefik-insecuretransport@kubernetescrd
          port: 8080

  tls:
    certResolver: letsencrypt
